Include footer form layout to add a product

--- a/www/app/components/home/homeView.html
+++ b/www/app/components/home/homeView.html
@@ -1,1 +1,5 @@
-<p>Hey homeView.html :)</p>
+<ion-list>
+    <ion-item ng-repeat="item in items">
+        Product name
+    </ion-item>
+</ion-list>
