Layout to add product into list ref #1

--- a/www/app/components/home/homeView.html
+++ b/www/app/components/home/homeView.html
@@ -1,4 +1,4 @@
-<ion-list>
+<ion-list ng-controller="HomeController">
     <ion-item ng-repeat="item in items">
         Product name
     </ion-item>
