--- a/www/app/components/home/footerView.html
+++ b/www/app/components/home/footerView.html
@@ -1,8 +1,8 @@
-<div class="bar bar-footer item-input-inset footer-item-input-insert">
+<div class="bar bar-footer item-input-inset footer-item-input-insert" ng-controller="HomeController">
     <label class="item-input-wrapper">
-        <input type="text" placeholder="Product name" maxlength="500">
+        <input type="text" placeholder="Product name" maxlength="500" ng-model="productName">
     </label>
-    <button class="button button-clear">
+    <button class="button button-clear" ng-click="add(productName)">
         Add
     </button>
 </div>
