--- a/www/app/components/home/homeView.html
+++ b/www/app/components/home/homeView.html
@@ -5,18 +5,18 @@
                 <img src="http://placehold.it/40?text=Hi.jpg">
                 <h2>{{ product.name }}</h2>
                 <p>
-                    <a href="#" class="subdued">{{ product.totalToBuy }} units</a>
+                    <a href="#" class="subdued">{{ product.quantity }} units</a>
                     <!--<a href="#" class="subdued">~R$ 2,50 unit</a>-->
                 </p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
-                <a class="tab-item" href="#">
+                <a class="tab-item" href="#" ng-click="product.increaseQuantity()">
                     <i class="icon ion-android-add-circle"></i> Add one
                 </a>
-                <a class="tab-item" href="#">
+                <a class="tab-item" href="#" ng-click="product.decreaseQuantity()">
                     <i class="icon ion-android-remove-circle"></i> Remove one
                 </a>
-                <a class="tab-item assertive" href="#">
+                <a class="tab-item assertive" href="#" ng-click="$parent.remove(product)">
                     <i class="icon ion-ios-trash"></i>
                     Remover da lista
                 </a>
