Fix #17, creating/extract functions to service

--- a/www/app/components/home/homeView.html
+++ b/www/app/components/home/homeView.html
@@ -1,6 +1,6 @@
 <ion-pane>
     <ion-content>
-        <div class="list card" ng-repeat="product in products">
+        <div class="list card" ng-repeat="product in getAll()">
             <div class="item item-avatar">
                 <img src="http://placehold.it/40?text=Hi.jpg">
                 <h2>{{ product.name }}</h2>
